--- a/homework01/task02/MyWebSite.html
+++ b/homework01/task02/MyWebSite.html
@@ -27,6 +27,7 @@
     <li>Майонез;</li>
     <li>Сыр;</li>
 </ul>
+<img src="https://avatars.mds.yandex.net/i?id=c71380c376e4d568db4c3ce8b60c535c206d9621-8276139-images-thumbs&n=13"" alt="Корзина продуктов">
 </div>
 
 <!--Делаю 2 колонки-->
