--- a/homework01/task02/MyWebSite.html
+++ b/homework01/task02/MyWebSite.html
@@ -9,15 +9,16 @@
 
 <body>
 <h1>Привет, <span><i>дорогой друг!</i></span></h1>
-<h3>Домашнее задание №2.</h3>
-<p>В нём я расскажу как я готовлю <strong>мясо по французски</strong>! Подберите слюньки =)<br>
-    Готовить это достаточно не сложно, примерно <strong>40 - 60 минут</strong>. Из них большую часть времени занимает
-    приготовления мяса.
+<h3><span>Домашнее задание №2.</span></h3>
+<p class="main">В нём я расскажу как я готовлю <strong>мясо по французски</strong>! Подберите слюньки =)<br>
+    Готовить это достаточно не сложно, примерно <strong>40 минут (но это не точно)</strong>. Из них большую часть времени занимает
+    приготовления мяса.</p>
+<p><a href="https://www.youtube.com/watch?v=ZwUlVDM9yhM" target="_blank">Ссылка на видео рецепт от Ивлева.</a></p>
 <hr>
 
 <!--Делаю 2 колонки-->
 <div class="container">
-    <h4>Нам понадобится:</h4>
+    <h3><span>Нам понадобится:</span></h3>  
 <ul>
     <li>Мясо. Я использую либо куриную грудку или свинной карбонад;</li>
     <li>Помидоры;</li>
@@ -27,12 +28,12 @@
     <li>Майонез;</li>
     <li>Сыр;</li>
 </ul>
-<img src="https://avatars.mds.yandex.net/i?id=c71380c376e4d568db4c3ce8b60c535c206d9621-8276139-images-thumbs&n=13"" alt="Корзина продуктов">
+<img class="picture" src="https://yandex-images.clstorage.net/5n1Vlv214/427e6btRet0/6URu2-uHEMsKd-K6ViVQYJitKzlaQt8HQieHle_squq9U4ehA4Nx65PzD6mRhJvcoFArbBYe47yiQp03a4L9Zf1Ufd0sFNJLSnch-BDnEaJaruk4X0MfkVf_CV3zMiS05IzYf95RMShGJ4kuwVSBUiXdOjoUmnqia9gEqXXfqfIlCmiTLd-TyAWgJrJUbpFrxmzhfQuDCY3NtM7e-XtteyvEnDFckfxgT-dFdQ6SSN29k3y7EpV3KW4USqH1FaU5og2vkeTe2gECb-x4FO5bIw-tr_gFQUoJgrWMk765Yr7sBNP5UBz45k-tC_zPWkbW9F65sB6V-qPo1kzouxsttelDalKuktHPhK6q-Rnl22_Bo-N0yULFwcZ7gtC-s69-aQeb_5gftylCagF3QZDCFrnR-zeXnL9nq9WA6z2e7Tpvgmiaaxifx4gspXjcqV-mAesm9QeMDQ8LsAVd9vbj_qjDEjufm7iqSSuJdAEYjB-xWz0yH5uyJaxeh-7_VG0xqkRqlmcelopLIGj7lCrfowPvL3hCyYqASbULWPq_YHZthxDzHlX8Y07lzLbOVYuWdNr18lef_mKmUMfqv5Pgua9Kplfj1pjDg2Fq_F0oXarNL-j4x4wMSA56BJm5-eZ34Q1RP1UWcOkO6gMzw5AFkPGSdrAa3v-hZNHE4r7aZ3Gqh-gfqV9ZgIrhqrFX6d9vwS5h9YzLiAwLukYZvnGo-mJFknjW1nhiwytLcMZZDZEwlDX9G1J35aaUxq9802q_KkyqkytUHglOamU_H65Z4A2qZrZBxEGAyjPLEf7zbzqqS9v035K1aYLoz7UNVISRMd4zcBoUtKUoHwsvOBwpMSlLoxctXlAGCmkkOVOsFGIJpiL0ikHJiIL7R9d6eKMyLEiXvd2SOSKO7QK1iNwMlzeROfGWFH2noNDA6_XQIDzlyG4Uo9VWyQSspXwcrBNjh6bsMk1Dg8eBckrbvU" alt="Корзина продуктов">
+<p>Картинка с абсолютной ссылкой</p>
 </div>
 
-<!--Делаю 2 колонки-->
-<div class="containerTwo">
-    <h4>Способ приготовления:</h4>
+<div class="container">
+    <h3><span>Способ приготовления: </span></h3>
     <ol>
         <li>Нарезаем мясо на слайсы примерно по 1см шириной. С помощью молотока кухонного отбиваем мясо. Солим, перчим (и
             любые другии специи по вкусу).
@@ -43,7 +44,7 @@
             сковородку
         </li>
         <li>Нарезаем полукольцем грибы. Отправляем обжариваться.</li>
-        <li>Нарезать кольцами помидоры.</li>z
+        <li>Нарезать кольцами помидоры.</li>
         <li>Сыр натереть на тёрке.</li>
         <li>На противень выкладываем куски мяса, добавляем немного майонеза и размазываем по мясу, выкладываем пожаренную
             морковь и лук, далее выкладываем
@@ -51,6 +52,8 @@
         </li>
         <li>За 5 минут до готовности посыпаем сыром и отправляем ещё на минуты 2.</li>
     </ol>
+    <img class="picture" src="D:\Coding\HTMLvscode\homework01\task02\image\cook.jpeg" alt="Повар">
+    <p>Картинка с относительной ссылкой</p>
 </div>
 </body>
 </html>
