--- a/homework02/MyWebSite.html
+++ b/homework02/MyWebSite.html
@@ -52,7 +52,7 @@
         </li>
         <li>За 5 минут до готовности посыпаем сыром и отправляем ещё на минуты 2.</li>
     </ol>
-    <img class="picture" src="D:\Coding\HTMLvscode\homework01\task02\image\cook.jpeg" alt="Повар">
+    <img class="picture" src="D:\Coding\HTMLvscode\homework02\image\cook.jpeg" alt="Повар">
     <p>Картинка с относительной ссылкой</p>
 </div>
 </body>
